force-app/main/default/objects/AIPiiFieldType__mdt/AIPiiFieldType__mdt.object-meta.xml
<CustomObject>
    <description>One record per recognized PII field shape (Email, SSN, Bank Account, etc). Keyword-matching rules used by AIPiiFieldTypeClassifier to derive a field&apos;s PII type from its API name, label, or data type - admin-configurable in Setup so new field-name shapes can be added without a deployment. Optionally tagged with a Compliance Group and linked to a Data Masking Rule.</description>
    <label>AI PII Field Type</label>
    <pluralLabel>AI PII Field Types</pluralLabel>
</CustomObject>