force-app/main/default/objects/AIPiiFieldType__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this rule is evaluated.</description>
    <inlineHelpText>Turn this off to disable the rule without deleting its configuration.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>