force-app/main/default/objects/AIPiiFieldType__mdt/fields/ComplianceGroup__c.field-meta.xml
<CustomField>
    <fullName>ComplianceGroup__c</fullName>
    <description>The AI PII Compliance Group this Field Type is tagged under, e.g. &quot;Health Information&quot;. Optional - only needed if this Field Type should also be reachable via the Compliance Group fallback (see IsComplianceGroupFallback__c).</description>
    <label>Compliance Group</label>
    <referenceTo>AIPiiComplianceGroup__mdt</referenceTo>
    <relationshipLabel>AI PII Field Types</relationshipLabel>
    <relationshipName>FieldTypes</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>