force-app/main/default/objects/AIPiiFieldType__mdt/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <description>Evaluation order, lowest first. More specific shapes (e.g. &quot;EmailAddress&quot; matching Email) must be ordered before broader ones they&apos;d otherwise be swallowed by (e.g. Address).</description>
    <inlineHelpText>Rules are checked in ascending order and the first match wins. Order specific shapes before broader ones.</inlineHelpText>
    <label>Display Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>