force-app/main/default/objects/AIPiiFieldType__mdt/fields/IsComplianceGroupFallback__c.field-meta.xml
<CustomField>
    <fullName>IsComplianceGroupFallback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When no keyword rule matches a field&apos;s name/label/data type, but the field&apos;s own Compliance Group equals this record&apos;s ComplianceGroup__c, this record&apos;s PIIFieldType__c is returned as a fallback. If more than one Field Type shares the same Compliance Group, only flag one of them as the fallback representative - otherwise the fallback match is ambiguous and the first one encountered wins.</description>
    <inlineHelpText>Check this to make this Field Type the fallback classification used when a field only matches by Compliance Group, not by name/label/data type.</inlineHelpText>
    <label>Is Compliance Group Fallback</label>
    <type>Checkbox</type>
</CustomField>