force-app/main/default/objects/AIPiiFieldType__mdt/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <description>Comma-separated list of normalized shapes (letters/digits only, no spaces or case) that all mean the same PII field type, e.g. &quot;creditcard,cardnumber&quot;.</description>
    <inlineHelpText>Comma-separated keywords to match, e.g. &quot;email&quot; or &quot;bankaccount,routingnumber,iban,sortcode&quot;.</inlineHelpText>
    <label>Keyword</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>