force-app/main/default/objects/AIPiiFieldType__mdt/fields/MaskingRule__c.field-meta.xml
<CustomField>
    <fullName>MaskingRule__c</fullName>
    <description>The AI PII Data Masking Rule used to generate a fake value for real data of this Field Type. Required - every Field Type must have exactly one Masking Rule. Currently read only by AIPiiPseudonymizationService, which only ever uses the SubstituteFromList strategy.</description>
    <label>Masking Rule</label>
    <referenceTo>AIPiiDataMaskingRule__mdt</referenceTo>
    <relationshipLabel>AI PII Field Types</relationshipLabel>
    <relationshipName>FieldTypes</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>