force-app/main/default/objects/AIPiiFieldType__mdt/fields/MatchField__c.field-meta.xml
<CustomField>
    <fullName>MatchField__c</fullName>
    <description>Which signal the keyword is matched against.</description>
    <inlineHelpText>NameOrLabelContains: keyword appears anywhere in the field&apos;s API name or label. ApiNameExact: the field&apos;s API name equals the keyword exactly (e.g. the standard &quot;Name&quot; field). DataTypeContains: keyword appears in the field&apos;s data type (e.g. Salesforce&apos;s built-in Address compound type).</inlineHelpText>
    <label>Match Field</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NameOrLabelContains</fullName>
                <default>true</default>
                <label>Name Or Label Contains</label>
            </value>
            <value>
                <fullName>ApiNameExact</fullName>
                <label>Api Name Exact</label>
            </value>
            <value>
                <fullName>DataTypeContains</fullName>
                <label>Data Type Contains</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>