force-app/main/default/objects/AIPiiFieldType__mdt/fields/PIIFieldType__c.field-meta.xml
<CustomField>
    <fullName>PIIFieldType__c</fullName>
    <description>The canonical PII field type code this record resolves to - must match one of the AIAssistApplicationConstants.PII_FIELD_TYPE_* values. Kept separate from the record&apos;s own label so the label can be edited freely without breaking the code&apos;s matching.</description>
    <inlineHelpText>The PII type this record resolves to, e.g. &quot;Email&quot; or &quot;Bank Account&quot;. Must match a value the code recognizes.</inlineHelpText>
    <label>PII Field Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>