force-app/main/default/objects/AIPiiFieldType__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>DisplayOrder__c</columns>
    <columns>MatchField__c</columns>
    <columns>Keyword__c</columns>
    <columns>PIIFieldType__c</columns>
    <columns>ComplianceGroup__c</columns>
    <columns>IsComplianceGroupFallback__c</columns>
    <columns>MaskingRule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>